#51680 Include bearing delta in reliability